src-errormsg/E22-EqOnFunction/Plutarch.err

/Users/sho/io/plinth-plutarch-paper-code/src-errormsg/E22-EqOnFunction/Plutarch.hs:40:20: error: [GHC-39999]
    • No instance for ‘PEq (PWithdraw :--> PInteger)’
        arising from a use of ‘#==’
    • In the expression: netWithdraw #== netWithdraw
      In an equation for ‘same’: same = netWithdraw #== netWithdraw
   |
40 | same = netWithdraw #== netWithdraw
   |                    ^^^
